<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_main"
            android:title="@string/title_main" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_bowl_full_of_food"
            android:title="@string/title_menu" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_heart"
            android:title="@string/title_favorites" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart"
            android:title="@string/title_cart" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_list"
            android:title="@string/title_orders" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_bell"
            android:title="@string/title_notifications" />

</menu>